# fontforge

./: .appveyor.yml  .clang-files  .clang-format  .crowdin.yml  .dir-locals.el  .gitignore  .gitmodules  .hgignore  .lgtm.yml  .readthedocs.yaml  .travis.yml  AUTHORS  CMakeLists.txt  CONTRIBUTING.md  COPYING  GNUmakefile.in  GNUmakefile.postamble.in  INSTALL-git.md  INSTALL.git  INSTALL.md  LICENSE  LICENSE.md  MSVC_WHEEL_PLAN.md  Makefile.am  Makefile.dynamic.in  Makefile.in  Makefile.static.in  PYTHON_MODULE_PLAN.md  Portfile  README  README-MS  README-MS.html  README-MS~  README-Mac.html  README-MacOSX  README-MacOSX~  README-Unix.html  README-unix  README.md  README_PYPI.md  (+37 more)
Unicode/: ArabicForms.c  CMakeLists.txt  GNUmakefile.in  GNUmakefile.postamble.in  Makefile.am  Makefile.dynamic.in  Makefile.in  Makefile.static.in  README.TXT  README.md  alphabet.c  backtrns.c  buildnameslist.c  char.c  cjk.c  combiners.h  common.mk  descrip.mms  dump.c  dynamic.c  gwwiconv.c  gwwintl.c  is_Ligature.c  is_Ligature_data.h  makebuildtables.c  makeutype.c  makeutype.py  memory.c  ucharmap.c  ucharmap.cpp  unialt.c  uninames.c  uninames_data.h  uninameslist.c  uninameslist.h  usprintf.c  ustring.c  utype.c
Unicode/charset/: .gitignore  (+31 more)
desktop/: CMakeLists.txt  Makefile.am  fontforge.appdata.xml  fontforge.desktop  org.fontforge.FontForge.appdata.xml  org.fontforge.FontForge.appdata.xml.in  org.fontforge.FontForge.desktop  org.fontforge.FontForge.metainfo.xml
doc/: CMakeLists.txt  Makefile.am  README-unix  Readme.VMS  manifest.txt  synch_web.py
ffspiro/: Makefile.in  README  aclocal.m4  bezctx_ff.c  bezctx_ff.h  configure  configure.in  ltmain.sh  spiro2ff.c
fontforge/: CMakeLists.txt  GNUmakefile.in  GNUmakefile.postamble.in  GNUmakefile.preamble.in  Makefile.am  Makefile.dynamic.in  Makefile.in  Makefile.static.in  PfEd.h  acorn2sfd.c  activeinui.c  alignment.c  anchorsaway.c  annotations.h  asmfpst.c  asmfpst.h  autohint.c  autohint.h  autosave.c  autosave.h  autotrace.c  autotrace.h  autowidth.c  autowidth.h  autowidth2.c  autowidth2.h  autowidth2dlg.c  autowidthdlg.c  basedlg.c  baseviews.h  bdffont.h  bdfinfo.c  bezctx_ff.c  bezctx_ff.h  bitmapchar.c  bitmapchar.h  bitmapcontrol.c  bitmapcontrol.h  bitmapdlg.c  bitmapview.c  (+343 more)
fontforgeexe/: .directory  CMakeLists.txt  Makefile.am  acorn2sfd.c  alignment.c  alignment.h  anchorsaway.c  anchorsaway.h  autowidth2dlg.c  autowidth2dlg.h  basedlg.c  basedlg.h  bdfinfo.c  bdfinfo.h  bitmapdlg.c  bitmapdlg.cpp  bitmapdlg.h  bitmapview.c  bitmapview.h  bv_mids.h  charinfo.c  charview.c  charview_private.h  clipui.c  collabclientui.c  collabclientui.h  combinations.c  combinations.h  contextchain.c  contextchain.h  cursors.c  cursors.h  cv_mids.h  cvaddpoints.c  cvdebug.c  cvdebug.h  cvdgloss.c  cvdgloss.h  cvexportdlg.c  cvexportdlg.h  (+117 more)
gdraw/: CMakeLists.txt  GNUmakefile.in  Makefile.am  Makefile.dynamic.in  Makefile.in  Makefile.static.in  choosericons.c  colorP.h  common.mk  ctlvalues.c  descrip.mms  div_tables.c  divisors.c  divisors.h  drawboxborder.c  dynamic.c  fontP.h  fsys.c  gaskdlg.c  gbuttons.c  gchardlg.c  gcolor.c  gcontainer.c  gdraw.c  gdrawP.h  gdrawable.c  gdrawbuildchars.c  gdrawerror.c  gdrawgimage.c  gdrawlogger.c  gdrawlogger.h  gdrawtxt.c  gdrawtxtinit.c  gdrawwacomdriver.c  genkeysym.c  gfilechooser.c  gfiledlg.c  gflowbox.c  ggadgetP.h  ggadgets.c  (+71 more)
gutils/: CMakeLists.txt  GNUmakefile.in  Makefile.am  Makefile.dynamic.in  Makefile.in  Makefile.static.in  common.mk  descrip.mms  divisors.c  dlist.c  dynamic.c  ffdir.cpp  fsys.c  fsys.cpp  g_giomime.c  gcol.c  gimage.c  gimagebmpP.h  gimageread.c  gimageread.cpp  gimagereadbmp.c  gimagereadgif.c  gimagereadjpeg.c  gimagereadjpeg.cpp  gimagereadpng.c  gimagereadras.c  gimagereadrgb.c  gimagereadtiff.c  gimagereadxbm.c  gimagereadxpm.c  gimagewritebmp.c  gimagewritegimage.c  gimagewritejpeg.c  gimagewritepng.c  gimagewritepng.cpp  gimagewritexbm.c  gimagewritexpm.c  gimagewritexpm.cpp  gio.c  gioP.h  (+16 more)
htdocs/: AA-Comparison.html  BDFgrey.html  FontForge.css  GlossaryFS.html  GlossaryFrame.html  HotKeys.html  IndexFS.html  IndexFrame.html  InsertTextDlg.html  MacOSX.html  Makefile.am  MetaFont.html  OFL-Unofficial-pl.html  OFL-Unofficial-vi.html  OFL-Unofficial.html  OFL-el.html  OFL-fr.html  OFL-vi.html  PfaEdit-TeX.html  Problems-MacOSX.html  RUN_ME_TO_CHANGE_THE_DOCS.sh  Styles.html  SuggestDeltas.html  TrueOpenTables.html  UniqueID.html  accented.html  acorn2sfd.html  anchorcontrol.html  autotrace.html  autowidth.html  baseline.html  bdfinfo.html  bezier.html  bibliography.html  bitmaponlysfnt.html  bitmapview.html  changelog.html  charinfo.html  charview.html  cidmapformat.html  (+123 more)
inc/: CMakeLists.txt  MacFiles.h  Makefile.am  Makefile.in  annotations_base.h  basics.h  carbon.h  chardata.h  charset.h  config.h.in  config.h_vms  descrip.mms  dlist.h  dynamic.h  ffdir.h  ffgdk.h  ffglib.h  ffglib_compat.h  ffprocess.h  ffunistd.h  fileutil.h  fontforge-config.h  fontforge-config.h.in  fontforge-version-extras.h.in  gc_veneer.c  gdraw.h  gfile.h  ggadget.h  gicons.h  gimage.h  gio.h  gkeysym.h  gnetwork.h  gprogress.h  gresedit.h  gresource.h  gutils.h  gwidget.h  gwwiconv.h  hotkeys.h  (+8 more)
mackeys/: Makefile.am
osx/: CMakeLists.txt  Makefile.am  Portfile  Portfile-app  README  archive-and-upload.sh  create-osx-app-bundle.sh  entitlements.plist  force-rebuild.sh  ipython-embed-fix.patch  make-package.sh
pluginloading/: Makefile.am  pluginloading.c
plugins/: ANALYZE_MAP.COM  Makefile.am  Makefile.in  descrip.mms  gb12345.c  libgb12345.c  plug.c
po/: CMakeLists.txt  GNUmakefile.in  LINGUAS  Makefile.am  Makefile.in  ca.po  common.mk  crowdin_id_update.sh  de.po  el.po  en_GB.po  en_UK.po  es.po  fix_newlines.py  fr.po  gr.po  hr.po  incl.mk  it.po  ja.po  ka.po  ka_GE.po  ko.po  ko.po.txt  mal.po  ml.po  pl.po  pt.po  ru.po  sv.po  th_TH.po  toengb.c  tr_TR.po  uk.po  update.py  vi.po  zh_CN.po  zh_TW.po
pyhook/: CMakeLists.txt  LICENSE  Makefile.am  README  configure.ac  fontforgepyhook.c  get_pyhook_install_dir.py  loadfontforge.h  psMatpyhook.c  setup.py.in
(+1737 files in other folders)
